--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ img {
 h3 {
   color: var(--dark-blue);
   margin-top: 0.8em;
-  margin-bottom: 0.5em;
+  margin-bottom: 0.3em;
 }
 
 span {
@@ -59,13 +59,14 @@ span {
 }
 
 .stats {
+  font-size: 0.85em;
   width: 100%;
-  border-top: 2px solid rgb(231, 231, 231);
+  border-top: 2px solid rgb(241, 241, 241);
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 1em;
-  margin-top: 1.3em;
+  padding: 1.5em;
+  margin-top: 1.5em;
 }
 
 .stats h3 {
