--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
   background: white;
   border-radius: 1em;
   overflow: hidden;
+  box-shadow: 0 0 60px 5px rgba(6, 7, 20, 0.25);
 }
 
 .background {
